--- a/src/model2sas/gui/subwindow_htmlview.ui
+++ b/src/model2sas/gui/subwindow_htmlview.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>500</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,9 +25,36 @@
   <property name="windowTitle">
    <string>Plot</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="4">
     <widget class="QWebEngineView" name="webEngineView"/>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="pushButton_save_data">
+     <property name="text">
+      <string>Save Data</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>311</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="pushButton_save_plot">
+     <property name="text">
+      <string>Save Plot</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
